<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wwb.bill.lab7.MainActivity">

    <EditText
        android:id="@+id/NewPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ConfirmPW"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/ConfirmPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:imeOptions="actionDone"/>

    <Button
        android:id="@+id/okBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ConfirmPW"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:text="@string/ok" />

    <Button
        android:id="@+id/clearBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/okBtn1"
        android:layout_alignBottom="@+id/okBtn1"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/okBtn1"
        android:text="@string/clear" />
</RelativeLayout>
